--- a/src/components/AboutSections/JumbotronAboutSection/JumbotronAboutSection.css
+++ b/src/components/AboutSections/JumbotronAboutSection/JumbotronAboutSection.css
@@ -30,7 +30,7 @@
 }
 
 #jumbotronAbout_bg{
-    background: url(../../../media/backgrounds/pexels-canva-studio-3194521.jpg);
+    background: url(../../../media/backgrounds/bg_photo2.webp);
     background-size: cover;
     background-position: center;
 }
