--- a/src/components/ContactsSections/EmailSection/EmailSection.css
+++ b/src/components/ContactsSections/EmailSection/EmailSection.css
@@ -1,5 +1,5 @@
 #Email_bg{
-    background: url(../../../media/backgrounds/pexels-chris-peeters-12838.jpg);
+    background: url(../../../media/backgrounds/bg_photo3.webp);
     background-size: cover;
     background-position: center;
     height: 100vh;
